Set -XX:MaxPermSize=128m for jsk 6 and 7 to prevent to prevent OOM: PermGen space